--- a/composer.json
+++ b/composer.json
@@ -18,14 +18,14 @@
     "require": {
         "php": ">=7.1",
         "doctrine/dbal": "~2.3",
-        "phpdocumentor/graphviz": "^1.0",
+        "phpdocumentor/graphviz": "1.0",
         "nikic/php-parser":"^2.0|^3.0|^4.0"
     },
     "require-dev": {
         "larapack/dd": "^1.0",
         "orchestra/testbench": "~3.5|~3.6|~3.7|~3.8|^4.0",
         "phpunit/phpunit": "^7.0| ^8.0",
-        "spatie/phpunit-snapshot-assertions": "^1.3"
+        "spatie/phpunit-snapshot-assertions": ">=1.3"
     },
     "autoload": {
         "psr-4": {
