--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "require": {
         "php": ">=7.1",
         "doctrine/dbal": "~2.3",
-        "phpdocumentor/graphviz": "1.0",
+        "phpdocumentor/graphviz": "^1.0",
         "nikic/php-parser":"^2.0|^3.0|^4.0"
     },
     "require-dev": {
